package ch.uzh.group8.checkersv2.dom;

public enum JumpGambleResult {
  NO_GAMBLE,
  WON,
  LOST
}
